Set z-index for RV Autocomplete's ul. Fixes #45

--- a/fixplugins.css
+++ b/fixplugins.css
@@ -181,3 +181,6 @@ ul#thumbnails .gthumb a img.thumbnail {
 
 /* PWG_Stuffs */
 .pwgstuffs-container { padding-top: 20px; }
+
+/* RV Autocomplete */
+ul.ui-autocomplete { z-index: 150; }
